--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ body{
     padding: 25px;
     background: rgba(247, 248, 250, 0.664);
     font-style: normal;
-    ext-decoration: #FFFFFF;
+    text-decoration: #FFFFFF;
     position:relative;
     border: none;
     font-size:20px;
